[tool.poetry]
name = "agent-bifrost"
version = "0.1.0"
description = "Multi-agent Elasticsearch and Kibana project with LangGraph and MCP"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langgraph = "^1.0.4"
langchain = "^1.1.3"
langchain-aws = "^1.1.0"
langchain-mcp-adapters = "^0.2.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
fastmcp = "^2.14.0"
langchain-anthropic = "^1.3.0"
langgraph-cli = {extras = ["inmem"], version = "^0.4.9"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
